# rust-latte

./: .gitignore  Cargo.toml  Makefile  README.md  run_tests.py
lib/: runtime.c
src/analyzer/: Cargo.toml
src/analyzer/src/: analyzer.rs  errors.rs  evaluation.rs  lib.rs  main.rs  operators.rs  types.rs
src/base/: Cargo.toml
src/base/src/: ast.rs  error.rs  lib.rs  symbol_table.rs  types.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/compiler/: Cargo.toml
src/compiler/src/: compiler.rs  instructions.rs  lib.rs
src/llvm/: Cargo.toml
src/llvm/src/: compiler.rs  control_flow_graph.rs  instructions.rs  lib.rs  operators.rs  utils.rs
src/llvm/src/mem2reg/: dominance.rs  mod.rs  transform.rs
src/llvm/src/optimizations/: base.rs  constants_folding.rs  globals.rs
src/llvm/src/optimizations/branches/: mod.rs  propagate_jumps.rs  reduce_paths.rs
src/llvm/src/optimizations/constants/: folding.rs  mod.rs  propagation.rs
src/llvm/src/optimizations/dead_code/: mod.rs  unreachable_blocks.rs  unreachable_instructions.rs  unused_assignments.rs  unused_statics_declares.rs
src/llvm/src/optimizations/phis/: mod.rs  trivial_phi.rs
src/llvm/src/optimizations/subexpressions/: common_subexpressions_elimination.rs  mod.rs
src/parser/: Cargo.toml
src/parser/generate/: Cargo.toml  generate.rs
src/parser/src/: grammar.lalrpop  lexer.rs  lib.rs
src/x86/: Cargo.toml
src/x86/src/: compiler.rs  instructions.rs  lib.rs  operators.rs
src/x86/src/register_allocation/: colouring.rs  interference_graph.rs  liveness.rs  mod.rs
tests/bad/: bad003.lat
tests/extensions/arrays1/: array001.lat
tests/good/: core001.lat  core003.lat  core006.lat  core007.lat  core008.lat  core011.lat  core012.lat  core015.lat  core021.lat
tests/my/bad/: array001.lat  array002.lat  array003.lat  array004.lat  array005.lat  array006.lat
tests/my/good/: array001.bc  array001.lat  array001.ll  array002.lat  array003.lat  array004.lat  array004.output
