[package]
name = "latte"
version = "0.1.0"
authors = ["Karol Waszczuk <waszczukarol@gmail.com>"]
edition = "2018"

[dependencies]
base = { path = "src/base" }
parser = { path = "src/parser" }
analyzer = { path = "src/analyzer" }
llvm = { path = "src/llvm" }

[workspace]
members = ["src/base", "src/parser", "src/parser/generate", "src/analyzer", "src/llvm"]

[[bin]]
name = "latc"
path = "src/cli/src/main.rs"

[[bin]]
name = "latc_x86"
path = "src/cli/src/main.rs"
