[package]
name = "latte"
version = "0.1.0"
authors = ["Karol Waszczuk <waszczukarol@gmail.com>"]
edition = "2018"

[dependencies]
base = { path = "src/base" }
parser = { path = "src/parser" }
analyzer = { path = "src/analyzer" }
llvm = { path = "src/llvm" }
x86 = { path = "src/x86", optional = true }

[workspace]
members = [
  "src/base",
  "src/parser",
  "src/analyzer",
  "src/llvm",
  "src/x86"
]

[[bin]]
name = "latc"
path = "src/cli/src/main.rs"

[[bin]]
name = "latc_llvm"
path = "src/cli/src/main.rs"
required-features = ["emit-llvm"]

[[bin]]
name = "latc_x86_64"
path = "src/cli/src/main.rs"
required-features = ["emit-x86_64"]

[features]
no-analysis = []
no-codegen = []
emit-llvm = []
emit-x86 = ["x86"]
emit-x86_64 = ["x86"]

default = []
