[package]
name = "llvm"
version = "0.1.0"
authors = ["Karol Waszczuk <waszczukarol@gmail.com>"]
edition = "2018"

[dependencies]
base = { path = "../base" }
parser = { path = "../parser" }

[lib]
name = "llvm"
path = "src/lib.rs"

[features]
optimization-constants = []
optimization-dead_code = []
optimization-branches = []
optimization-phis = []
all-optimizations = []
no-optimizations = []

default=["all-optimizations"]
