[package]
name = "generate_parser"
version = "0.1.0"
authors = ["Karol Waszczuk <waszczukarol@gmail.com>"]
edition = "2018"
build = "generate.rs"

[dependencies]
base = { path = "../../base" }
lalrpop-util = "0.17.2"
regex = "0.2.0"

[build-dependencies]
lalrpop = "0.17.2"

[lib]
name = "parser"
path = "../src/lib.rs"
